insert, adjust, delete functions; near finished (but untested)

--- a/vcache-trie.cabal
+++ b/vcache-trie.cabal
@@ -45,6 +45,9 @@ Library
 
     Strict
     Ident
+    Data.VCache.Trie.Type
+    Data.VCache.Trie.Mem
+    Data.VCache.Trie.MemType
    
   ghc-options: -Wall -auto-all
 
