--- a/vcache-trie.cabal
+++ b/vcache-trie.cabal
@@ -10,8 +10,7 @@ Description:
   shared prefixes or elements with a common prefix are likely to be
   updated together.
   .
-  Currently, the implementation is specialized to a bytestring trie,
-  and follows the interface of the bytestring-trie package.
+  Currently, the implementation is specialized to a bytestring trie.
   
 Author: David Barbour
 Maintainer: dmbarbour@gmail.com
