--- a/vcache-trie.cabal
+++ b/vcache-trie.cabal
@@ -1,5 +1,5 @@
 Name: vcache-trie
-Version: 0.1.1
+Version: 0.1.2
 Synopsis: patricia tries modeled above VCache 
 Category: Database
 Description:
@@ -8,7 +8,7 @@ Description:
   structures be modeled above it. The trie is useful for modeling key
   value databases or abstract virtual filesystems, where keys have 
   shared prefixes or elements with a common prefix are likely to be
-  updated together.
+  updated together. 
   .
   Currently, the implementation is specialized to a bytestring trie.
   
@@ -40,6 +40,9 @@ Library
   Exposed-Modules:
     Data.VCache.Trie
     Data.VCache.Trie.Type
+
+    -- Data.VCache.Trie.Monoid
+    -- Data.VCache.Trie.Monoid.Type
 
   Other-Modules:
 
