--- a/vcache-trie.cabal
+++ b/vcache-trie.cabal
@@ -1,5 +1,5 @@
 Name: vcache-trie
-Version: 0.1.2
+Version: 0.2.0
 Synopsis: patricia tries modeled above VCache 
 Category: Database
 Description:
@@ -23,6 +23,10 @@ license-file: LICENSE
 Stability: experimental
 build-type: Simple
 cabal-version: >= 1.16.0.3
+
+Extra-source-files:
+    README.md 
+    changelog.md
 
 Source-repository head
   type: git
